# ELTE-IK-CPP

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  install_packages.cmd  latex_packages.txt
.travis/: export_variables.sh  install-texlive-latest.sh  texlive.profile.template
book/: CMakeLists.txt
book/01extra_cpp/: CMakeLists.txt
book/01gy_cpp/: CMakeLists.txt
book/02extra_cpp/: CMakeLists.txt
book/02gy_cpp/: CMakeLists.txt
book/03gy_cpp/: CMakeLists.txt
book/04gy_cpp/: CMakeLists.txt
book/05gy_cpp/: CMakeLists.txt
book/06gy_cpp/: CMakeLists.txt
book/07gy_cpp/: CMakeLists.txt
book/08gy_cpp/: CMakeLists.txt
book/09gy_cpp/: CMakeLists.txt
book/10gy_cpp/: CMakeLists.txt
book/11gy_cpp/: CMakeLists.txt
book/12gy_cpp/: CMakeLists.txt
book/cpp_book/: CMakeLists.txt  cpp_book.tex
cmake/: UseLATEX.cmake  helper.cmake
exercise/: CMakeLists.txt
exercise/01exercise_cpp/: CMakeLists.txt
exercise/02exercise_cpp/: CMakeLists.txt
exercise/03exercise_cpp/: CMakeLists.txt
exercise/exercise_book/: CMakeLists.txt
include/: preamble.tex
